[debug] document circt_debug_* intrinsics
Add a section to docs/src/explanations/intrinsics.md describing the
experimental circt_debug_* intrinsic family: what each of the four
intrinsics carries, how to enable emission via the CLI flag or the
EmitDebugIntrinsicsAnnotation, and known limitations around JDK 17+
reflective access restrictions and Scala 3 constructor parameter names.

Based on work of @rameloni

Signed-off-by: fkhaidari <khaidari.fg@gmail.com>